# department_structure_api

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  DECISIONS.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial.py
app/: config.py  database.py  exceptions.py  models.py  schemas.py
app/routers/: departments.py  employees.py
app/services/: departments.py  employees.py
tests/: conftest.py  test_api.py
